Start on Ranking

--- a/sports-iq/src/app/pages/stats/stats.component.html
+++ b/sports-iq/src/app/pages/stats/stats.component.html
@@ -45,6 +45,9 @@
 				@case (5) {
 					<si-mlb-pitcher-table [seasons]="seasons()" [positions]="positions()"></si-mlb-pitcher-table>
 				}
+				@case (6) {
+					<si-mlb-team-table [seasons]="seasons()"></si-mlb-team-table>
+				}
 			}
 		</div>
 	</div>
