--- a/sports-iq/src/partials/_si-colors.scss
+++ b/sports-iq/src/partials/_si-colors.scss
@@ -1,4 +1,17 @@
 $siTeal: #35d1b6;
 $siLogoTeal: #41e3c6;
 
-$offGrey: #85948f;
+$siGray900: #2d3449;
+$siGray800: #3f465a;
+$siGray700: #51586e;
+$siGray600: #626a82;
+$siGray500: #78819b;
+$siGray400: #979cb2;
+$siGray300: #bbc0d3;
+$siGray200: #d0d3e4;
+$siGray100: #e0e3f1;
+$siGray50: #f2f4fb;
+$siGray25: #f8f9fe;
+
+$nhaErrorBackground: #fde8e8;
+$nhaDarkRed: #bc2c2c;
