Start on Ranking page

--- a/sports-iq/src/app/pages/stats/mlb-pitcher-table/mlb-pitcher-table.component.html
+++ b/sports-iq/src/app/pages/stats/mlb-pitcher-table/mlb-pitcher-table.component.html
@@ -110,4 +110,4 @@
 	</si-stats-filter>
 }
 
-<mat-paginator [pageSizeOptions]="[25, 50, 100]" showFirstLastButtons aria-label="Select page of NBA data"></mat-paginator>
+<mat-paginator [pageSizeOptions]="[25, 50, 100]" showFirstLastButtons aria-label="Select page of MLB pitchers"></mat-paginator>
