Continue on Ranking page

--- a/sports-iq/src/app/components/matchup-dialog/matchup-dialog.component.html
+++ b/sports-iq/src/app/components/matchup-dialog/matchup-dialog.component.html
@@ -1,1 +1,5 @@
-<p>matchup-dialog works!</p>
+<h2 mat-dialog-title>Ranking Matchup</h2>
+<mat-dialog-content> </mat-dialog-content>
+<mat-dialog-actions>
+	<button mat-button color="warn" mat-dialog-close>Close</button>
+</mat-dialog-actions>
