--- a/sports-iq/src/app/pages/ranking/ranking.component.html
+++ b/sports-iq/src/app/pages/ranking/ranking.component.html
@@ -23,8 +23,8 @@
 		} @else {
 			<table mat-table [dataSource]="dataSource() ?? []" recycleRows>
 				<ng-container matColumnDef="Rank">
-					<th mat-header-cell *matHeaderCellDef></th>
-					<td mat-cell *matCellDef="let element">{{ element.rank }}</td>
+					<th mat-header-cell *matHeaderCellDef>Rank</th>
+					<td mat-cell *matCellDef="let element">{{ element.rank }} ({{ element.positionRank }})</td>
 				</ng-container>
 
 				<ng-container matColumnDef="Name">
