--- a/sports-iq/src/app/components/position-chips/position-chips.component.html
+++ b/sports-iq/src/app/components/position-chips/position-chips.component.html
@@ -1,4 +1,1 @@
-<span class="chip" [class]="color()">
-	<ng-content select="[chip-content]"></ng-content>
-	{{ position() }}
-</span>
+<mat-chip [class]="color()"> {{ position() }}</mat-chip>
