--- a/sports-iq/src/app/components/position-chips/position-chips.component.scss
+++ b/sports-iq/src/app/components/position-chips/position-chips.component.scss
@@ -1,20 +1,14 @@
 @use "si-colors" as *;
+@use "@angular/material" as mat;
 
 :host {
-	.chip {
-		background-color: $siGray100;
-		color: $siGray800;
-		padding: 5px 12px;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		border-radius: 50px;
-		position: relative;
-		width: fit-content;
-
+	mat-chip {
 		&.red {
-			color: $nhaErrorBackground;
-			background-color: $nhaDarkRed;
+			@include mat.chips-overrides(
+				(
+					elevated-selected-container-color: $nhaErrorBackground
+				)
+			);
 		}
 	}
 }
