--- a/sports-iq/src/app/pages/ranking/ranking.component.html
+++ b/sports-iq/src/app/pages/ranking/ranking.component.html
@@ -23,7 +23,7 @@
 		} @else {
 			<table mat-table [dataSource]="dataSource() ?? []" recycleRows>
 				<ng-container matColumnDef="Rank">
-					<th mat-header-cell *matHeaderCellDef>Rank</th>
+					<th mat-header-cell *matHeaderCellDef matTooltip="Rank (Position Rank)">Rank</th>
 					<td mat-cell *matCellDef="let element">{{ element.rank }} ({{ element.positionRank }})</td>
 				</ng-container>
 
@@ -61,4 +61,4 @@
 	</div>
 </si-sidenav>
 
-<mat-paginator [pageSizeOptions]="[25, 50, 100]" showFirstLastButtons aria-label="Select page of Player ranking"></mat-paginator>
+<mat-paginator [pageSizeOptions]="[50, 100, 200]" showFirstLastButtons aria-label="Select page of Player ranking"></mat-paginator>
