--- a/victory-curve/src/app/tracker/tracker.component.html
+++ b/victory-curve/src/app/tracker/tracker.component.html
@@ -31,7 +31,9 @@
 								@let championImage = "https://ddragon.leagueoflegends.com/cdn/15.7.1/img/champion/" + champion.image;
 
 								<img [src]="championImage" width="50" height="50" />
-								<span>{{ champion.name }}</span>
+								<span
+									>{{ champion.name }} <i>({{ champion.summonerName }})</i></span
+								>
 							</div>
 							<div class="items-section">
 								@for (item of getChampionItem(champion.summonerName); track $index) {
@@ -51,7 +53,9 @@
 								@let championImage = "https://ddragon.leagueoflegends.com/cdn/15.7.1/img/champion/" + champion.image;
 
 								<img [src]="championImage" width="50" height="50" />
-								<span>{{ champion.name }}</span>
+								<span
+									>{{ champion.name }} <i>({{ champion.summonerName }})</i></span
+								>
 							</div>
 							<div class="items-section flip">
 								@for (item of getChampionItem(champion.summonerName); track $index) {
