Add Base services

--- a/sports-iq/src/app/app.html
+++ b/sports-iq/src/app/app.html
@@ -4,9 +4,11 @@
     <mat-card-subtitle>Your Ultimate Sports Companion</mat-card-subtitle>
   </mat-card-header>
 
+  <mat-card-content>
+    <mat-chip class="error">Example Chip</mat-chip>
+  </mat-card-content>
+
   <mat-card-actions>
-    <button mat-button varient="filled" color="primary" routerLink="/dashboard">
-      Go to Dashboard
-    </button>
+    <button mat-flat-button routerLink="/dashboard">Go to Dashboard</button>
   </mat-card-actions>
 </mat-card>
