--- a/sports-iq/src/app/app.html
+++ b/sports-iq/src/app/app.html
@@ -1,14 +1,3 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Sports IQ</mat-card-title>
-    <mat-card-subtitle>Your Ultimate Sports Companion</mat-card-subtitle>
-  </mat-card-header>
+<siq-sidenav></siq-sidenav>
 
-  <mat-card-content>
-    <mat-chip class="error">Example Chip</mat-chip>
-  </mat-card-content>
-
-  <mat-card-actions>
-    <button mat-flat-button routerLink="/dashboard">Go to Dashboard</button>
-  </mat-card-actions>
-</mat-card>
+<router-outlet></router-outlet>
