Setting up Auth

--- a/sports-iq/src/app/components/sidenav/sidenav.html
+++ b/sports-iq/src/app/components/sidenav/sidenav.html
@@ -1,1 +1,33 @@
-<p>sidenav works!</p>
+@if (isExpanded()) {
+  <div class="sidenav-container sidenav-expanded">
+    <div class="menu-container">
+      <img src="assets/sportsiq-icon.svg" alt="SportsIQ Logo" class="logo-icon" />
+      <span class="logo-text">SportsIQ</span>
+    </div>
+
+    <siq-spacer></siq-spacer>
+    <mat-nav-list>
+      <a mat-list-item>
+        <mat-icon matListItemIcon>login</mat-icon>
+        <span matListItemTitle>Login</span>
+      </a>
+      <a mat-list-item (click)="isExpanded.set(false)">
+        <mat-icon matListItemIcon>keyboard_double_arrow_left</mat-icon>
+        <span matListItemTitle>Collapse</span>
+      </a>
+    </mat-nav-list>
+  </div>
+} @else {
+  <div class="sidenav-container sidenav">
+    <img src="assets/sportsiq-icon.svg" alt="SportsIQ Logo" class="logo-icon" />
+
+    <siq-spacer></siq-spacer>
+
+    <button matIconButton (click)="login()">
+      <mat-icon>login</mat-icon>
+    </button>
+    <button matIconButton (click)="isExpanded.set(true)">
+      <mat-icon>keyboard_double_arrow_right</mat-icon>
+    </button>
+  </div>
+}
